add update price to swagger move vehicle id to query to avoid conflict
