# SampleApplication/application/org2/swagger/swagger.json
@@ -55,37 +55,7 @@
         "tags": [
           "Vehicle"
         ],
-        "summary": "Get all vehicles",
-        "parameters": [{
-          "in": "header",
-          "name": "enrollment-id",
-          "required": "true",
-          "schema": {
-            "type": "string",
-            "example": "user1"
-          }
-        }],
-        "responses": {
-          "200": {
-            "description": "All vehicles listed",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "result": {
-                  "type": "object"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/vehicle/{id}": {
-      "get": {
-        "tags": [
-          "Vehicle"
-        ],
-        "summary": "Get vehicle by id",
+        "summary": "Get all vehicles or by id",
         "parameters": [{
           "in": "header",
           "name": "enrollment-id",
@@ -95,9 +65,8 @@
             "example": "user1"
           }
         }, {
-          "in": "path",
+          "in": "query",
           "name": "id",
-          "required": "true",
           "schema": {
             "type": "string",
             "example": "vehicle13"
@@ -105,7 +74,7 @@
         }],
         "responses": {
           "200": {
-            "description": "Vehicle listed",
+            "description": "All vehicles listed",
             "schema": {
               "type": "object",
               "properties": {
